--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,9 @@
         android:layout_width="280dp"
         android:layout_height="45dp"
         android:layout_marginTop="64dp"
+        android:gravity="center_vertical"
+        android:textSize="18sp"
+        android:textColor="@android:color/black"
         android:background="#F8F1F1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
