--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonAdd"
         android:layout_width="120dp"
         android:layout_height="50dp"
         android:layout_marginTop="48dp"
@@ -58,13 +58,13 @@
         android:onClick="Add"
         android:text="Add"
         android:textColor="#ffffff"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
+        app:layout_constraintEnd_toStartOf="@+id/buttonSubtract"
         app:layout_constraintHorizontal_bias="0.616"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonMultiply"
         android:layout_width="120dp"
         android:layout_height="50dp"
         android:layout_marginTop="36dp"
@@ -74,14 +74,14 @@
         android:textColor="#ffffff"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button5"
+        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
         app:layout_constraintHorizontal_bias="0.616"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/buttonAdd"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/buttonSubtract"
         android:layout_width="120dp"
         android:layout_height="50dp"
         android:layout_marginTop="48dp"
@@ -95,7 +95,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/buttonDivide"
         android:layout_width="120dp"
         android:layout_height="50dp"
         android:layout_marginTop="36dp"
@@ -107,7 +107,7 @@
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSubtract"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
